--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -46,9 +46,8 @@
       <%# //Logo %>
 
       <%# Hero heading wrap %>
-      <div class="national__heading-wrap">
+      <div class="national__heading__intro">
         <h1>
-          <%# [BACKEND] Number of stores and products need to be dynamic. The number will also need to be rounded so it's presentable. We always round down to the hundred e.g. if it's 3995 stores, we'll present "3,900". %>
           <span>Over <%= @stores_count %> stores. Over <%= @products_count %> products</span>
           You want. We find.
         </h1>
