--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -12,7 +12,7 @@
   <div class="tile__meta__inner">
     <h3 class="tile__meta__hdr txt-truncate"><%= result.name %></h3>
     <p class="tile__meta__desc txt-truncate">
-      <%= result.date "%-m %b %Y" %>, <%= result.start "%I:%M %p" %>
+      <%= result.date "%-d %b %Y" %>, <%= result.start "%I:%M %p" %>
     </p>
   </div>
 </div>
