--- a/app/views/centre_info/_parking_complimentary.html.erb
+++ b/app/views/centre_info/_parking_complimentary.html.erb
@@ -2,6 +2,6 @@
   <div class="grid__item one-whole">
     <p>Complimentary parking available for all customers.</p>
 
-    <!--<small class="fine-print">Parking <%= link_to 'terms &amp; conditions'.html_safe, '#' %> apply</small>-->
+    <small class="fine-print">Parking <%= link_to 'terms &amp; conditions'.html_safe, @parking.terms_and_conditions_url, target: "_blank" %> apply</small>
   </div>
 </div>
