--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <% if request.xhr? %>
-    <script>window.pinBoard.rebuild(5);</script>
+    <script>(new PinBoard).build()</script>
   <% end %>
   <%# //Pin board %>
 
