--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -347,11 +347,9 @@
   <%# //Preloader %>
 
   <div ng-if="!products.loading">
-    <div ng-show="products.loaded" ng-bind-html="products.list"></div>
+    <div ng-if="products.loaded" ng-bind-html="products.list"></div>
     <%# Using a !products.loaded on ng-hide so that the loader will be shown immediately %>
-    <div ng-hide="products.loaded" ng-if="!products.list.length">
-      <%= render 'products' %>
-    </div>
+    <div ng-if="!products.loaded"><%= render 'products' %></div>
   </div>
 
 </div>
