--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,14 +1,20 @@
-<% if result.cloudinary_public_id %>
-  <div class="tile__image">
+<div class="tile__image">
+  <% if result.cloudinary_public_id %>
     <%= cl_image_tag result.cloudinary_public_id,
+      'data-height' => result.image_height,
       format: 'jpg',
       alt: "Photo of product: #{result.title}",
       width: 288,
-      crop: :limit,
-      'data-height' => result.image_height
+      crop: :limit
     %>
-  </div>
-<% end %>
+  <% else %>
+    <%= fetch_image_tag result.primary_image,
+      alt: "Photo of product: #{result.title}",
+      width: 288,
+      crop: :limit
+    %>
+  <% end -%>
+</div>
 
 <div class="tile__meta">
   <span class="tile__meta__icon">
