Moved t&c and text parking info into partials.

--- a/app/views/centre_info/_parking_complimentary.html.erb
+++ b/app/views/centre_info/_parking_complimentary.html.erb
@@ -4,4 +4,6 @@
 
     <small class="fine-print">Parking <%= link_to 'terms &amp; conditions'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: "_blank" %> apply</small>
   </div>
+
+  <%= render partial: "parking_info" %>
 </div>
