--- a/app/views/centre_info/_parking_rates.html.erb
+++ b/app/views/centre_info/_parking_rates.html.erb
@@ -31,7 +31,7 @@
         </tbody>
       </table>
     </div>
-    <%= render partial: 'parking_terms_and_conditions' %>
+    <%= render partial: 'parking_terms_and_conditions', locals: {align: 'center'} %>
   </div>
 
   <%= render partial: "parking_info" %>
