--- a/app/views/centre_info/_parking_terms_and_conditions.html.erb
+++ b/app/views/centre_info/_parking_terms_and_conditions.html.erb
@@ -1,1 +1,1 @@
-<small class="fine-print fine-print--center">*<%= @parking.credit_card_surcharge_amount %>% surcharge on all credit card payments parking <%= link_to 'terms &amp; conditions apply'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: '_blank', class:"terms-link" %>.</small>
+<small class="fine-print fine-print--<%= align %>">*<%= @parking.credit_card_surcharge_amount %>% surcharge on all credit card payments parking <%= link_to 'terms &amp; conditions apply'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: '_blank', class:"terms-link" %>.</small>
